k8s/task-queue/redis/k8s/redis_rabbitmq/celery_workers.yaml
# namespace
apiVersion: v1
kind: Namespace
metadata:
  name: celery-workers
---
# deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery-workers-deployment
  namespace: celery-workers
spec:
  replicas: 1
  selector:
    matchLabels:
      component: worker
  template:
    metadata:
      labels:
        component: worker
    spec:
      containers:
        - name: celery-worker
          image: bensmidt/flask-celery-async-microservice
          command:
            - "bash"
            - "-c"
            - "celery -A main.celery worker -l info"
---
