k8s/task-queue/redis/k8s/redis_rabbitmq/flask_server.yaml
# namespace
apiVersion: v1
kind: Namespace
metadata:
  name: flask-backend
---
# deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-server-deployment
  namespace: flask-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      component: backend
  template:
    metadata:
      labels:
        component: backend
    spec:
      containers:
        - name: flask-server
          image: bensmidt/flask-celery-async-microservice
          ports:
            - containerPort: 5000
---
# service
apiVersion: v1
kind: Service
metadata:
  name: flask-server-service
  namespace: flask-backend
spec:
  selector:
    component: backend
  ports:
    - port: 3000
      targetPort: 5000
