k8s/task-queue/redis/k8s/redis_rabbitmq/redis_database.yaml
---
# namespace
apiVersion: v1
kind: Namespace
metadata:
  name: redis-database
---
# deploy
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
  namespace: redis-database
spec:
  replicas: 1
  selector:
    matchLabels:
      component: database
  template:
    metadata:
      labels:
        component: database
    spec:
      containers:
        - image: redis:latest
          name: redis
          args: ["--requirepass", "$(REDIS_PASSWORD)"]
          ports:
            - containerPort: 6379
---
# service
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: redis-database
spec:
  ports:
    - port: 6379
  selector:
    component: database
---
